@@ -4258,7 +4258,11 @@ For packages with a @file{configure} file generated by GNU
 @command{autoconf} and either @file{configure.ac} or
 @file{configure,.in}, check that @command{autoreconf} can, if available,
 be run in a copy of the sources (this will detect missing source files
-and report @command{autoconf} warnings).
+and report @command{autoconf} warnings).  Environment variable
+@env{AUTORECONf} controls the command used: it can give the full path to
+@command{autoreconf} (without spaces) and can include flags such as
+@option{--warnings=obsolete} (which is added for @command{autoreconf}
+version 2.68 or 2.69 and is the default for later versions).
 Default: false (but true for CRAN submission checks).
 
 @item _R_CHECK_DATALIST_
